temp ruban fix overflow

--- a/style.css
+++ b/style.css
@@ -51,15 +51,20 @@ select {
 #another:active {
     background-color: #4b6fb3;
 }
-
-#forkme {
+#aaa {
     position: absolute;
-    transform: rotate(45deg) translate(0px, 25px);
-    -webkit-transform: rotate(45deg) translate(0px, 25px);
-    top:    0;
-    right:  0;
     width:  200px;
     height: 200px;
+    overflow: hidden;
+    top:    0;
+    right:  0;
+}
+#forkme {
+    transform: rotate(45deg)  translate(0px, 25px);
+    -webkit-transform: rotate(45deg)  translate(0px, 25px);
+	position: relative;
+	width: 100%;
+	height: 100%;
 }
 
 #forkme a {
